Fixed borders on footer being slightly misaligned.

--- a/console/css/style.css
+++ b/console/css/style.css
@@ -99,8 +99,8 @@ footer
     color: var(--headerFooterTextColour);
     padding: 0.2em;
     padding-left: 2em;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 8px;
+    margin-right: 8px;
     text-align: left;
     border-radius: 10px;
     position: fixed;
